docs/api/qiskit/0.33/qiskit.algorithms.optimizers.IMFIL.mdx
---
title: IMFIL (v0.33)
description: API reference for qiskit.algorithms.optimizers.IMFIL in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.IMFIL
---

# IMFIL

<Class id="qiskit.algorithms.optimizers.IMFIL" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/algorithms/optimizers/imfil.py" signature="IMFIL(maxiter=1000)" modifiers="class">
  Bases: `qiskit.algorithms.optimizers.optimizer.Optimizer`

  IMplicit FILtering algorithm.

  Implicit filtering is a way to solve bound-constrained optimization problems for which derivatives are not available. In comparison to methods that use interpolation to reconstruct the function and its higher derivatives, implicit filtering builds upon coordinate search followed by interpolation to get an approximate gradient.

  Uses skquant.opt installed with pip install scikit-quant. For further detail, please refer to [https://github.com/scikit-quant/scikit-quant](https://github.com/scikit-quant/scikit-quant) and [https://qat4chem.lbl.gov/software](https://qat4chem.lbl.gov/software).

  **Parameters**

  **maxiter** (`int`) – Maximum number of function evaluations.

  **Raises**

  **MissingOptionalLibraryError** – scikit-quant not installed

  ## Methods

  <span id="qiskit-algorithms-optimizers-imfil-get-support-level" />

  ### get\_support\_level

  <Function id="qiskit.algorithms.optimizers.IMFIL.get_support_level" signature="IMFIL.get_support_level()">
    Returns support level dictionary.
  </Function>

  <span id="qiskit-algorithms-optimizers-imfil-gradient-num-diff" />

  ### gradient\_num\_diff

  <Function id="qiskit.algorithms.optimizers.IMFIL.gradient_num_diff" signature="IMFIL.gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)" modifiers="static">
    We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

    **Parameters**

    *   **x\_center** (*ndarray*) – point around which we compute the gradient
    *   **f** (*func*) – the function of which the gradient is to be computed.
    *   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
    *   **max\_evals\_grouped** (*int*) – max evals grouped

    **Returns**

    the gradient computed

    **Return type**

    grad
  </Function>

  <span id="qiskit-algorithms-optimizers-imfil-minimize" />

  ### minimize

  <Function id="qiskit.algorithms.optimizers.IMFIL.minimize" signature="IMFIL.minimize(fun, x0, jac=None, bounds=None)">
    Minimize the scalar function.

    **Parameters**

    *   **fun** (`Callable`\[\[`Union`\[`float`, `ndarray`]], `float`]) – The scalar function to minimize.
    *   **x0** (`Union`\[`float`, `ndarray`]) – The initial point for the minimization.
    *   **jac** (`Optional`\[`Callable`\[\[`Union`\[`float`, `ndarray`]], `Union`\[`float`, `ndarray`]]]) – The gradient of the scalar function `fun`.
    *   **bounds** (`Optional`\[`List`\[`Tuple`\[`float`, `float`]]]) – Bounds for the variables of `fun`. This argument might be ignored if the optimizer does not support bounds.

    **Return type**

    `OptimizerResult`

    **Returns**

    The result of the optimization, containing e.g. the result as attribute `x`.
  </Function>

  <span id="qiskit-algorithms-optimizers-imfil-optimize" />

  ### optimize

  <Function id="qiskit.algorithms.optimizers.IMFIL.optimize" signature="IMFIL.optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)">
    Runs the optimization.
  </Function>

  <span id="qiskit-algorithms-optimizers-imfil-print-options" />

  ### print\_options

  <Function id="qiskit.algorithms.optimizers.IMFIL.print_options" signature="IMFIL.print_options()">
    Print algorithm-specific options.
  </Function>

  <span id="qiskit-algorithms-optimizers-imfil-set-max-evals-grouped" />

  ### set\_max\_evals\_grouped

  <Function id="qiskit.algorithms.optimizers.IMFIL.set_max_evals_grouped" signature="IMFIL.set_max_evals_grouped(limit)">
    Set max evals grouped
  </Function>

  <span id="qiskit-algorithms-optimizers-imfil-set-options" />

  ### set\_options

  <Function id="qiskit.algorithms.optimizers.IMFIL.set_options" signature="IMFIL.set_options(**kwargs)">
    Sets or updates values in the options dictionary.

    The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

    **Parameters**

    **kwargs** (*dict*) – options, given as name=value.
  </Function>

  <span id="qiskit-algorithms-optimizers-imfil-wrap-function" />

  ### wrap\_function

  <Function id="qiskit.algorithms.optimizers.IMFIL.wrap_function" signature="IMFIL.wrap_function(function, args)" modifiers="static">
    Wrap the function to implicitly inject the args at the call of the function.

    **Parameters**

    *   **function** (*func*) – the target function
    *   **args** (*tuple*) – the args to be injected

    **Returns**

    wrapper

    **Return type**

    function\_wrapper
  </Function>

  ## Attributes

  ### bounds\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.bounds_support_level">
    Returns bounds support level
  </Attribute>

  ### gradient\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.gradient_support_level">
    Returns gradient support level
  </Attribute>

  ### initial\_point\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.initial_point_support_level">
    Returns initial point support level
  </Attribute>

  ### is\_bounds\_ignored

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.is_bounds_ignored">
    Returns is bounds ignored
  </Attribute>

  ### is\_bounds\_required

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.is_bounds_required">
    Returns is bounds required
  </Attribute>

  ### is\_bounds\_supported

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.is_bounds_supported">
    Returns is bounds supported
  </Attribute>

  ### is\_gradient\_ignored

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.is_gradient_ignored">
    Returns is gradient ignored
  </Attribute>

  ### is\_gradient\_required

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.is_gradient_required">
    Returns is gradient required
  </Attribute>

  ### is\_gradient\_supported

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.is_gradient_supported">
    Returns is gradient supported
  </Attribute>

  ### is\_initial\_point\_ignored

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.is_initial_point_ignored">
    Returns is initial point ignored
  </Attribute>

  ### is\_initial\_point\_required

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.is_initial_point_required">
    Returns is initial point required
  </Attribute>

  ### is\_initial\_point\_supported

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.is_initial_point_supported">
    Returns is initial point supported
  </Attribute>

  ### setting

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.setting">
    Return setting
  </Attribute>

  ### settings

  <Attribute id="qiskit.algorithms.optimizers.IMFIL.settings">
    **Return type**

    `Dict`\[`str`, `Any`]
  </Attribute>
</Class>

